Bug: fix issue where button background color appeared gray on safari on PLP and header search (#436)

--- a/cartridges/app_storefront_base/cartridge/client/default/scss/components/_headerSearch.scss
+++ b/cartridges/app_storefront_base/cartridge/client/default/scss/components/_headerSearch.scss
@@ -28,6 +28,7 @@
         top: 0.5625em; /* 9/16 */
         right: 0.5625em; /* 9/16 */
         padding: 0;
+        background-color: transparent;
     }
 
     .reset-button {
@@ -36,6 +37,7 @@
         top: 0.5625em; /* 9/16 */
         right: 2em; /* 32/16 */
         padding: 0;
+        background-color: transparent;
     }
 
     input {
