--- a/cartridges/app_storefront_base/cartridge/client/default/scss/search.scss
+++ b/cartridges/app_storefront_base/cartridge/client/default/scss/search.scss
@@ -87,6 +87,7 @@
             button {
                 border: none;
                 color: $blue;
+                background-color: transparent;
             }
         }
     }
